--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <title>Pirates Booty</title>
     <script>
         window.onload = init;
-        function intit() {
-        var map = document.getElementById("map")
-        //handler
+
+        function init() {
+        var map = document.getElementById("map");
+        map.onmousemove = showCoords;
         }
         function showCoords (eventObj) {
         var coords = document.getElementById("coords");
-        //get coords
-        //get coords
-        coords.innerHTML = "Map coordinates: " + x + ", " + y;
+            var x = eventObj.clientX;
+            var y = eventObj.clientY;
+            coords.innerHTML = "Map coordinates: " + x + ", " + y;
         }
     </script>
 </head>
 <body>
     <img id="map" src = "map.jpg">
-    <p id = "coords"> Move mouse to find co-ordinates...</p>
+    <p id="coords"> Move mouse to find co-ordinates...</p>
 </body>
 
 
